@@ -1,0 +1,14 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>MathML-like SVG</title>
+    </head>
+    <body style="margin: 0">
+        <!--
+        Image based on: https://en.wikipedia.org/wiki/Pythagorean_theorem
+        with a black square added for testing.
+        -->
+        <img class="mwe-math-fallback-image-inline" src="mathml.svg" alt="Pythagorean theorem">
+    </body>
+</html>
